<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uKeeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_mail">SendMailActivity</string>
    <string name="clean_page">Clean page</string>
    <string name="full_page">Full page</string>
    <string name="url_hint">Page url</string>
    <string name="send">Send</string>
    <string name="use_system_mail_agent">Use system mail agent</string>
    <string name="use_builtin_mail_agent">Use builtin gmail agent</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="key_username">user</string>
    <string name="key_password">pass</string>
    <string name="key_mode">mode</string>

</resources>
