<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ukeeper.SendMailActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_hint"
        android:inputType="textUri" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio_clean_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_page"
            android:checked="true"
            android:onClick="onPageTypeClicked" />

        <RadioButton
            android:id="@+id/radio_full_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_page"
            android:onClick="onPageTypeClicked" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:onClick="onSendClicked" />

</LinearLayout>